2010-01-30  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c, src/callbacks.*: Introduce a toolbar button to show/hide
	the data pane. This allows the user to have more screen space for program
	editing.
	* po/gnusim8085.pot: Update to include the tooltip for newly added button.
	* po/*.po, po/LINGUAS, AUTHORS: Arabic, Asturian, Esperanto, Italian
	translation.

2010-01-28  Onkar Shinde  <onkarshinde@gmail.com>

	* po/de.po, po/LINGUAS, AUTHORS: German translation.
	* src/file-op-gio.c: Use GIO APIs for saving assembly listing.

2010-01-26  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, src/file-op-gio.*, src/Makefile.am: Experimental file
	handling with GIO APIs, disabled by default.
	* configure.in: Change website URL to www.gnusim8085.org.

2010-01-25  Onkar Shinde  <onkarshinde@gmail.com>

	* po/*.po, AUTHORS: Updated Gujarati and Spanish translation from
	launchpad.

2010-01-24  Onkar Shinde  <onkarshinde@gmail.com>

	* po/fr.po, po/LINGUAS, AUTHORS: French translation.

2010-01-17  Onkar Shinde  <onkarshinde@gmail.com>

	* doc/Makefile.am: Fix a small problem in man page installation.
	* configure.in: Remove some redundant path definitions. Fix PACKAGE_URL
	declaration.
	* pixmaps/Makefile.am: Use PACKAGE_PIXMAPS_DIR directly.
	* Makefile.am: Use docdir directly.
	* src/Makefile.am: Move PACKAGE_DOC_DIR definition here. It is only used
	in source code and no other place.
	* .gitignore: Ignore all .gmo files.
	* src/8085.h, src/interface.c, src/support.h: Mark menu labels and tooltips
	for translation. Call the GTK+ helper function for translation.
	* po/*.po, po/gnusim8085.pot: Update as per code changes.

2010-01-15  Onkar Shinde  <onkarshinde@gmail.com>

	* doc/Makefile.am: Better handling of installation of examples and manpage.
	* po/*: Spanish translation.

2009-12-29  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Define a variable if gtksourceview version is >= 2.8.