@@ -1,3 +1,8 @@
+2010-01-31  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/interface.c, src/callbacks.*: Add basic printing support for program
+	editor as well.
+
 2010-01-30  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* src/interface.c, src/callbacks.*: Introduce a toolbar button to show/hide
